# microWork_-GD32F470

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bsp/gd32f470/: CMakeLists.txt  gd32f470zg_flash.ld  gd32f4xx_libopt.h  hal_adc_gd32.c  hal_nvm_gd32.c  hal_time_gd32.c  hal_uart_gd32.c  syscalls.c
cmake/: gcc-arm-none-eabi.cmake
docs/: algorithms.md  architecture.md  hardware.md
src/app/: app.c  app.h  main.c
src/calc/: dfdt.c  dfdt.h  freq.c  freq.h  harmonic.c  harmonic.h  rms.c  rms.h  signal_calc.c  signal_calc.h
src/config/: config.c  config.h
src/hal/: hal_adc.h  hal_nvm.h  hal_time.h  hal_uart.h
src/measure/: measure.c  measure.h
tests/: CMakeLists.txt  fake_hal_nvm.c  test_config.c  test_dfdt.c  test_freq.c  test_harmonic.c  test_measure.c  test_rms.c  test_util.h
